<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_perfil_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilCliente">

    <RelativeLayout
        android:id="@+id/linear_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@color/azul_500"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_account_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ahcliente"
                app:civ_border_color="@color/azul_500"
                app:civ_border_width="2dp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vpc_nombre_usuario"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vpc_nombres"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vpc_apellidos"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vpc_contacto"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vpc_cantidad_mascotas"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
        </LinearLayout>

        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tipoMascotaEspecifico"
                android:text="Placeholder"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombreMascotaEspecifico"
                android:text="Placeholder"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/razaMascotaEspecifico"
                android:text="Placeholder"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/colorMascotaEspecifico"
                android:text="Placeholder"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="45dp"
                android:layout_width="match_parent">

            </Space>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tamanioMascotaEspecifico"
                android:text="Placeholder"
                android:textSize="20dp"
                android:textAlignment="center"
                >
            </androidx.appcompat.widget.AppCompatTextView>
            <Space android:layout_height="30dp"
                android:layout_width="match_parent">

            </Space>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>